Bug 66798 - [bug] weston-keyboard does not launch in correct location with screen transform
Summary: [bug] weston-keyboard does not launch in correct location with screen transform
Status: VERIFIED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-07-10 21:43 UTC by Brian Lovin
Modified: 2013-07-22 16:39 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Keyboard popping up in wrong location. (431.92 KB, video/webm)
2013-07-10 21:43 UTC, Brian Lovin
Details

Description Brian Lovin 2013-07-10 21:43:57 UTC
Created attachment 82301 [details]
Keyboard popping up in wrong location.

System Environment:
--------------------------
Distro: Fedora 17
Arch: x86_64
wayland (HEAD) 1.1.91-0-g3f3671e
fontconfig (master) heads/master-0-gcbf06d7
drm (HEAD) libdrm-2.4.45-0-g63aeae1
mesa (9.1) heads/9.1-0-g26f802d
libxkbcommon (HEAD) xkbcommon-0.3.0-0-g27a1176
pixman (HEAD) pixman-0.30.0-0-g41daf50
cairo (HEAD) 1.12.14-0-g0dac37c
weston (HEAD) 1.1.91-0-g46cb4a9

Detailed Description:
-----------------------------
Run the editor client with a transform of 90 specified and observe the keyboard not being in the correct location

Steps to Reproduce:
----------------------------
1. start weston under DRM mode with transform=90
2. ./editor
3. Observe weston-keyboard appearing in incorrect location

A video displaying this behavior has been attached to the bug.
Comment 1 Brian Lovin 2013-07-10 21:53:12 UTC
This may also be related, if using the VKB in dual head mode the VKB will always pop up on only one of the screens.
Comment 2 Rob Bradford 2013-07-11 12:21:19 UTC
Patch to fix sent to the list.
Comment 3 Kristian Høgsberg 2013-07-13 02:12:49 UTC
Patch applied, thanks.

commit 25fbbf71f79d0dad3d235825f008fc496b4732f6
Author: Rob Bradford <rob@linux.intel.com>
Date:   Thu Jul 11 13:20:53 2013 +0100

    shell: Respect output transformation for input panel surface
    
    Rather than using the dimensions in the mode we can use the recently
    added output width and height members which are updated to reflect any
    output rotation.
    
    https://bugs.freedesktop.org/show_bug.cgi?id=66798
Comment 4 Joe Konno 2013-07-22 16:39:19 UTC
Verified. Thanks robster, krh!


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.